fix review comments